more styling added, fixed dialog box, moving to 4 models

--- a/public/views/About.html
+++ b/public/views/About.html
@@ -1,7 +1,10 @@
 <div ng-controller="HomeController as vm">
-<div style="padding: 30px">
-<h2> How it works: </h2>
-
+<div style="padding: 90px">
+<section layout layout-align="center">
+  <img src="/images/food.png" style="padding:20px">
+    <img src="/images/apt.png" style="padding:20px" >
+      <img src="/images/money.png" style="padding:20px" >
+</section>
 <p>Whatever cold-pressed church-key fanny pack bushwick art party bicycle rights. Hoodie offal authentic art party, direct trade fanny pack yuccie mlkshk. Blue bottle wayfarers yr, ramps leggings four loko before they sold out crucifix narwhal actually disrupt green juice street art cold-pressed. Yuccie twee sartorial, cliche kinfolk narwhal echo park artisan retro cold-pressed. Swag trust fund pop-up meditation chambray, hammock polaroid yuccie pitchfork aesthetic squid vegan. Next level plaid farm-to-table listicle migas. Biodiesel art party aesthetic, deep v authentic cold-pressed messenger bag occupy bespoke direct trade.
 <br>
 <br>
