--- a/public/views/AddSitter.html
+++ b/public/views/AddSitter.html
@@ -1,13 +1,13 @@
 <div ng-controller="AddSitterController as vm">
 
-  <form ng-submit="vm.addSitter()" layout="row">
+  <form ng-submit="vm.addSitter()" layout="row" style="padding: 90px">
 <div flex="60" style="padding-left: 40px">
     <md-input-container layout-padding>
       <label> Pal Name </label>
       <input required ng-model="vm.sitter.name" ></input>
     </md-input-container>
     <md-input-container layout-padding>
-      <label> Unit Number </label>
+      <label> Suite Number </label>
       <input required ng-model="vm.sitter.unit" ></input>
     </md-input-container>
     <md-input-container layout-padding>
