--- a/public/views/Home.html
+++ b/public/views/Home.html
@@ -1,27 +1,11 @@
-<div ng-controller="HomeController as vm">
+<div ng-controller="HomeController as vm" >
 
-<div style="height:100px; width:100%;">
+<div style="height: 120px; width: 100%;">
 <img src="/images/apartment.jpg">
 </div>
-	<!-- <md-grid-list md-cols-gt-sm="2" md-cols-sm="2" md-row-height-gt-md="1:1" md-row-height="5:3" md-row-height="150px" style="margin: 100px" md-gutter-gt-md="100px" md-gutter-gt-sm="8px" md-gutter="10px">
 
-  <md-grid-tile style="background-color:#b9f6ca;" ui-sref="ViewSitters" class="gridButton">
+<!-- <div style="padding: 70px">
+	<img src="/images/apt.png">
+</div> -->
 
-    <div layout="column" class="recipeBodyTile">
-      <div flex>
-      <p class="md-display-2"> SITTERS </p>
-      </div>
-    </div>
-  </md-grid-tile>
-
-  <md-grid-tile style = "background-color:#b388ff;" ui-sref="ViewPets" class="gridButton">
-
-    <div layout="column" class="recipeBodyTile">
-      <div flex>
-        <p class="md-display-2"> PETS </p>
-      </div>
-    </div>
-  </md-grid-tile>
-
-</md-grid-list> -->
 </div>
