--- a/public/views/ViewSitters.html
+++ b/public/views/ViewSitters.html
@@ -1,37 +1,30 @@
-<div ng-controller="ViewSittersController as vm">
-  <md-content>
+<div ng-controller="ViewSittersController as vm" >
+  <div style="text-align:center; padding:25px;">
+    <md-button layout-fill class="md-raised" ui-sref="AddSitter"> CLICK TO ADD YOURSELF TO OUR LIST OF PALS </md-button>
+  </div>
+  <md-content style="padding-left: 90px; padding-bottom: 90px;">
     <div layout layout-wrap>
-      <md-card layout="column" flex="30" layout-wrap ng-repeat="a in vm.sitters">
+      <md-card  flex="30" layout-wrap ng-repeat="a in vm.sitters">
         <img ng-src="/images/sitters.png" style="height:90px; width:90px; margin:auto; padding-top:20px">
         <md-card-content layout-wrap>
           <span flex></span>
           <div style="text-align:center;">
             <h1> {{a.name}}</h1>
           </div>
-          <h4> Unit: </h4>
+          <h4> Suite: </h4>
           <h5> {{a.unit}} </h5>
           <span flex></span>
         </md-card-content>
         <div layout>
           <span flex></span>
-          <md-button ng-click="showBio = true;" ng-hide="showBio"> Know More </md-button>
+          <md-button ng-click="vm.showAlert(a)"> Know More </md-button>
           <md-button ng-show='nav.status.username;' ng-click="vm.editSitter(a._id, a)"> Edit </md-button>
           <md-button ng-show='nav.status.username;' ng-click="vm.deleteSitter(a)"> Delete </md-button>
-          <span flex></span>
-        </div>
-        <div class="container well" ng-show="showBio" style="padding:10px">
-          <h5> {{a.bio}} </h5>
-          <span flex></span>
-          <md-button ng-click="showBio =false;">Close</md-button>
-          <md-button> Email Pal </md-button>
           <span flex></span>
         </div>
       </md-card>
       <br/>
   </md-content>
-  <div style="text-align:center">
-    <md-button class="md-raised" ui-sref="AddSitter"> ADD YOURSELF TO OUR LIST OF PALS </md-button>
-  </div>
   </div>
 </div>
 </div>
