--- a/public/views/post.html
+++ b/public/views/post.html
@@ -1,3 +1,41 @@
-<div ng-controller="HomeController as vm">
+<div ng-controller= "HomeController as vm">
+
+  <div style="padding:30px">
+    <img src="/images/sos.png">
+   <form class="well container" ng-submit="vm.addMsg();">
+  <md-input-container>
+    <label> Name </label>
+  <input type="text" ng-model="vm.posts.name" required md-maxlength="20">
+  </md-input-container>
+  <label> Name </label>
+<input type="text" ng-model="vm.posts.name" required md-maxlength="20">
+</md-input-container>
+  <md-input-container>
+    <label>Message</label>
+    <input type="text" ng-model="vm.posts.msg" required md-maxlength="200">
+  </md-input-container>
+    <md-button type="submit" class="md-raised md-warn">SUBMIT<br/><i class="material-icons right">send</i></md-button>
+  </form>
+  </div>
+
+  <md-content>
+  <md-list>
+  <md-list-item class="md-4-line" ng-repeat="c in vm.msgs">
+
+   <i class="material-icons md-24"; style="padding-top: 4px">filter_vintage</i>
+    <div class="md-list-item-text" style="padding:10px;">
+      <h4>{{c.name}}</h4>
+      <h5>{{c.msg}}</h5>
+      </div>
+    <md-divider ng-if="!$last" style="padding: 5px"></md-divider>
+  </md-list-item>
+  </md-list>
+  </md-content>
+
+
+
+
+
+
 
 </div>
