--- a/public/views/Contact.html
+++ b/public/views/Contact.html
@@ -1,18 +1,18 @@
 <div ng-controller="HomeController as vm">
 
 <form ng-submit="vm.contact()" style="padding: 90px">
-  <img src="/images/msg.png" style="padding:20px" layout-align="center">
+  <img src="/images/contact.png" style="padding:20px" layout-align="center">
   <md-input-container layout-padding>
     <label> Name </label>
-    <input required ng-model="vm.msg.name" ></input>
+    <input disabled ng-model="vm.msg.name" ></input>
   </md-input-container>
   <md-input-container layout-padding>
     <label> Suite Number </label>
-    <input required ng-model="vm.msg.unit"></input>
+    <input disabled ng-model="vm.msg.unit"></input>
   </md-input-container>
   <md-input-container layout-padding>
   <label> Email </label>
-  <input required ng-model="vm.msg.email"></input>
+  <input disabled ng-model="vm.msg.email"></input>
 </md-input-container>
   <md-input-container layout-padding>
     <label> Message </label>
