fixed chat form bug

--- a/views/index.html
+++ b/views/index.html
@@ -31,6 +31,7 @@
 		<md-button ui-sref="About"> HOW IT WORKS </md-button>
 		<md-button ui-sref="ViewPets"> PETS </md-button>
 		<md-button ui-sref="ViewSitters"> PALS </md-button>
+		<md-button ui-sref="Chat"> CHAT </md-button>
 		<md-button ui-sref="Post"> POST </md-button>
 		<md-button ui-sref="Contact"> CONTACT MANAGEMENT </md-button>
 	</div>
