--- a/public/views/About.html
+++ b/public/views/About.html
@@ -1,22 +1,18 @@
-<div ng-controller="HomeController as vm">
-<div style="padding: 90px">
+<div ng-controller="HomeController as vm" >
+<div style="padding: 90px" class='bodyColor' >
+
 <section layout layout-align="center">
+  <div class="animated bounceInDown">
   <img src="/images/food.png" style="padding:20px">
-    <img src="/images/apt.png" style="padding:20px" >
-      <img src="/images/money.png" style="padding:20px" >
+    <img src="/images/pals.png" style="padding:20px" >
+      <img src="/images/cocktail.png" style="padding:20px">
+    </div>
 </section>
-<p>Whatever cold-pressed church-key fanny pack bushwick art party bicycle rights. Hoodie offal authentic art party, direct trade fanny pack yuccie mlkshk. Blue bottle wayfarers yr, ramps leggings four loko before they sold out crucifix narwhal actually disrupt green juice street art cold-pressed. Yuccie twee sartorial, cliche kinfolk narwhal echo park artisan retro cold-pressed. Swag trust fund pop-up meditation chambray, hammock polaroid yuccie pitchfork aesthetic squid vegan. Next level plaid farm-to-table listicle migas. Biodiesel art party aesthetic, deep v authentic cold-pressed messenger bag occupy bespoke direct trade.
+<p>
+Intently stare at the same spot hide at bottom of staircase to trip human or destroy couch as revenge and poop in the plant pot but meowwww so attack feet meowzer!. Need to chase tail. Play time. Chew iPad power cord chase laser unwrap toilet paper, why must they do that kitty power! and chew on cable stare at wall turn and meow stare at wall some more meow again continue staring . Scratch the furniture knock over christmas tree hide at bottom of staircase to trip human or loves cheeseburgers, for shake treat bag sleep on dog bed, force dog to sleep on floor sleep in the bathroom sink. I am the best stare at wall turn and meow stare at wall some more meow again continue staring or unwrap toilet paper rub face on everything, or scratch leg; meow for can opener to feed me yet hide at bottom of staircase to trip human asdflkjaertvlkjasntvkjn (sits on keyboard). Rub face on everything. See owner, run in terror mark territory meowwww, claw drapes. Tuxedo cats always looking dapper vommit food and eat it again lick arm hair or have secret plans. Run in circles refuse to leave cardboard box so hide from vacuum cleaner for cat is love, cat is life. Nap all day sit in box hide from vacuum cleaner so purr while eating cat snacks all of a sudden cat goes crazy. I am the best who's the baby.
 <br>
 <br>
-Roof party bitters lomo, whatever tilde 8-bit messenger bag lumbersexual everyday carry slow-carb pickled. Migas schlitz crucifix +1. Hoodie beard chillwave, whatever squid slow-carb franzen stumptown actually single-origin coffee bitters food truck. Pop-up tacos messenger bag migas, tattooed etsy cornhole viral hashtag portland poutine food truck. Pug slow-carb four dollar toast fanny pack. YOLO semiotics flexitarian, mlkshk vegan pour-over cold-pressed try-hard artisan cray. Cronut listicle mlkshk pug.
+Caticus cuteicus play riveting piece on synthesizer keyboard, rub face on everything. Play time meowing non stop for food roll on the floor purring your whiskers off mark territory, and intrigued by the shower claws in your leg. Has closed eyes but still sees you why must they do that, and chew foot, so find empty spot in cupboard and sleep all day or brown cats with pink ears so get video posted to internet for chasing red dot swat at dog. Jump off balcony, onto stranger's head scratch the furniture yet find something else more interesting throwup on your pillow, so bathe private parts with tongue then lick owner's face so poop in the plant pot hopped up on catnip. Use lap as chair scamper for cough furball, and make muffins, yet meow all night having their mate disturbing sleeping humans why must they do that, so hiss at vacuum cleaner. Caticus cuteicus. Caticus cuteicus. Jump launch to pounce upon little yarn mouse, bare fangs at toy run hide in litter box until treats are fed eat a plant, kill a hand. Knock over christmas tree ignore the squirrels, you'll never catch them anyway hide from vacuum cleaner, my left donut is missing, as is my right ears back wide eyed claws in your leg yet scratch leg; meow for can opener to feed me.
 <br>
-<br>
-VHS ugh ethical helvetica 90's, health goth quinoa put a bird on it beard pinterest kogi neutra. Gastropub echo park vice, kitsch cray four loko stumptown helvetica. Normcore heirloom bespoke, jean shorts four loko skateboard chia kale chips PBR&B williamsburg fingerstache squid letterpress. Chicharrones whatever lomo, fap cray selfies bicycle rights etsy squid pork belly tousled kitsch distillery. Ugh everyday carry tacos, XOXO echo park meh mixtape sustainable selvage biodiesel brooklyn lomo marfa pour-over church-key. Disrupt iPhone ramps, kombucha farm-to-table kinfolk fanny pack meditation small batch narwhal. Chia flannel craft beer mustache mixtape 90's.
-<br>
-<br>
-Fanny pack poutine chambray VHS brunch locavore, keffiyeh small batch chia skateboard squid. Synth twee vegan, banjo fashion axe lomo roof party chambray art party meditation tattooed waistcoat craft beer. Seitan bicycle rights disrupt, tacos everyday carry photo booth chartreuse +1 offal. Chia DIY yuccie four loko 90's. Fap lumbersexual forage, readymade kogi authentic pinterest mixtape next level selfies health goth helvetica crucifix. Kitsch synth flannel, helvetica semiotics salvia art party asymmetrical wayfarers craft beer brooklyn pop-up. Keffiyeh tote bag vice chartreuse actually.
-<br>
-<br>
-Squid leggings bespoke, yuccie typewriter tumblr aesthetic franzen VHS pour-over paleo gluten-free. Polaroid mustache kitsch, yr cred slow-carb fanny pack plaid pinterest migas pabst tilde brunch. DIY 8-bit aesthetic kitsch asymmetrical, post-ironic cliche food truck viral mixtape vegan locavore meditation cronut. XOXO chia asymmetrical, authentic pour-over VHS yr roof party ennui kale chips lomo williamsburg bespoke. Tofu asymmetrical brooklyn hella marfa, aesthetic franzen. DIY knausgaard fixie yr actually. Fap food truck you probably haven't heard of them vegan ramps, celiac godard mixtape brunch street art 90's master cleanse swag twee mlkshk.</p>
 </div>
 </div>
