--- a/public/views/EditSitter.html
+++ b/public/views/EditSitter.html
@@ -1,4 +1,4 @@
-<div ng-controller="EditSitterController as vm">
+<div ng-controller="EditSitterController as vm" class='bodyColor'>
 
   <form ng-submit="vm.updateSitter()" layout="row" style="padding: 90px">
 <div flex="60" style="padding-left: 40px">
@@ -12,7 +12,7 @@
     </md-input-container>
     <md-input-container layout-padding>
       <label> Describe Yourself </label>
-      <textarea ng-model="vm.editSitter.bio" columns="1" md-maxlength="1000"></textarea>
+      <textarea ng-model="vm.editSitter.bio" columns="1" md-maxlength="2000"></textarea>
       </md-input-container>
 
     <div layout="row" style="padding-top:50px">
