--- a/public/views/Home.html
+++ b/public/views/Home.html
@@ -1,11 +1,8 @@
-<div ng-controller="HomeController as vm" >
+<div ng-controller="HomeController as vm" class='bodyColor'>
 
 <div style="height: 120px; width: 100%;">
 <img src="/images/apartment.jpg">
 </div>
 
-<!-- <div style="padding: 70px">
-	<img src="/images/apt.png">
-</div> -->
 
 </div>
