--- a/public/views/Chat.html
+++ b/public/views/Chat.html
@@ -1,11 +1,15 @@
-<div ng-controller= "HomeController as vm">
+<div ng-controller= "HomeController as vm" class='bodyColor'>
 
-  <div style="padding:90px">
+  <div style="padding:90px;">
+    <section layout layout-align="center">
+      <div class="animated bounceInDown" style="padding-bottom: 30px" >
     <img src="/images/msg.png">
+  </div>
+</section>
    <form ng-submit="vm.addMsg();">
   <md-input-container>
     <label> Name </label>
-  <input disabled ng-model="vm.chats.name" required>
+  <input disabled ng-model="vm.chats.name | usernameFilter" required>
   </md-input-container>
   <md-input-container>
   <label> Suite </label>
@@ -13,19 +17,19 @@
 </md-input-container>
   <md-input-container>
     <label> Message </label>
-    <input ng-model="vm.chats.msg" required md-maxlength="1000">
+    <input ng-model="vm.chats.msg" required md-maxlength="2000">
   </md-input-container>
     <md-button type="submit" class="md-raised"> SEND</md-button>
   </form>
   </div>
 
-  <md-content>
+  <md-content class='bodyColor'>
   <md-list  style="padding-left:90px; padding-right: 90px;">
   <md-list-item class="md-4-line" ng-repeat="c in vm.msgs">
 
    <i class="material-icons md-24"; style="padding-top: 4px"> filter_vintage </i>
     <div class="md-list-item-text" style="padding:10px;">
-      <h4>{{c.name | uppercase}} / Suite #{{c.unit}}:</h4>
+      <h4>{{c.name  | usernameFilter}} / Suite #{{c.unit}}:</h4>
       <h5>{{c.msg}}</h5>
       </div>
     <md-divider ng-if="!$last" style="padding: 5px"></md-divider>
