--- a/views/index.html
+++ b/views/index.html
@@ -2,9 +2,9 @@
 <html ng-app="app">
 
 <head>
-	<title> </title>
+	<title>Title</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="/angular-material/angular-material.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/0.11.4/angular-material.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" type="text/css" href="/css/site.css">
 </head>
@@ -12,57 +12,57 @@
 <body ng-controller='GlobalController as nav'>
 
 	<md-sidenav class="md-sidenav-right md-whiteframe-z2" md-component-id="right">
-			<md-toolbar class="md-theme-light" style="padding : 10px; background-color: #38B0DE">
-				<h1 class="md-toolbar-tools"> Login/Register </h1>
-			</md-toolbar>
-			<md-content  layout-padding>
-				<div ng-show="nav.isLogin">
+		<md-toolbar class="md-theme-light" style="padding : 10px; background-color: #38B0DE">
+			<h1 class="md-toolbar-tools"> Login/Register </h1>
+		</md-toolbar>
+		<md-content layout-padding>
+			<div ng-show="nav.isLogin">
 				<form ng-submit="nav.login();">
 					<md-input-container>
 						<label>Username</label>
-						<input type="text" ng-model="nav.user.username" >
+						<input type="text" ng-model="nav.user.username">
 					</md-input-container>
 					<md-input-container>
 						<label>Password</label>
 						<input type="password" ng-model="nav.user.password">
 					</md-input-container>
-				<md-button type="submit" class="md-raised">
-					Login
-				</md-button>
-				<md-button ng-click="nav.isLogin = false;" class="md-raised">
-					Register
-				</md-button>
-			</form>
+					<md-button type="submit" class="md-raised">
+						Login
+					</md-button>
+					<md-button ng-click="nav.isLogin = false;" class="md-raised">
+						Register
+					</md-button>
+				</form>
 			</div>
 
-				<div ng-show="!nav.isLogin">
-        <form ng-submit="nav.register();">
-          <md-input-container>
-          <label>Name</label>
-          <input ng-model="nav.user.name">
-          </md-input-container>
-            <md-input-container>
-          <label>Suite</label>
-          <input ng-model="nav.user.unit">
-          </md-input-container>
-          <md-input-container>
-            <label>Username</label>
-            <input ng-model="nav.user.username">
-          </md-input-container>
-          <md-input-container>
-            <label>Email</label>
-            <input type="email" ng-model="nav.user.email">
-          </md-input-container>
-          <md-input-container>
-            <label>Password</label>
-            <input type="password" ng-model="nav.user.password">
-          </md-input-container>
-          <md-button type="submit" class="md-raised"> Register</md-button>
-          <md-button type="button" class="md-raised" ng-click="nav.isLogin = true;">Cancel</md-button>
-        </form>
-      </div>
-			</md-content>
-		</md-sidenav>
+			<div ng-show="!nav.isLogin">
+				<form ng-submit="nav.register();">
+					<md-input-container>
+						<label>Name</label>
+						<input ng-model="nav.user.name">
+					</md-input-container>
+					<md-input-container>
+						<label>Suite</label>
+						<input ng-model="nav.user.unit">
+					</md-input-container>
+					<md-input-container>
+						<label>Username</label>
+						<input ng-model="nav.user.username">
+					</md-input-container>
+					<md-input-container>
+						<label>Email</label>
+						<input type="email" ng-model="nav.user.email">
+					</md-input-container>
+					<md-input-container>
+						<label>Password</label>
+						<input type="password" ng-model="nav.user.password">
+					</md-input-container>
+					<md-button type="submit" class="md-raised"> Register</md-button>
+					<md-button type="button" class="md-raised" ng-click="nav.isLogin = true;">Cancel</md-button>
+				</form>
+			</div>
+		</md-content>
+	</md-sidenav>
 
 	<md-toolbar style=" background-color: #ff8d00;" layout>
 
@@ -76,33 +76,39 @@
 		</section>
 	</md-toolbar>
 	<div style='text-align:center; height:50px; width:100%; margin:auto; background-color: #696969;' flex>
-		<md-button style="color: white"ui-sref="Home"> HOME </md-button>
-		<md-button style="color: white"ui-sref="About"> HOW IT WORKS </md-button>
-		<md-button style="color: white"ui-sref="ViewPets"> PETS </md-button>
-		<md-button style="color: white"ui-sref="ViewSitters"> PALS </md-button>
-		<md-button style="color: white"ui-sref="Chat"> CHAT </md-button>
-		<md-button style="color: white"ui-sref="Contact"> CONTACT MANAGEMENT </md-button>
+		<md-button style="color: white" ui-sref="Home"> HOME </md-button>
+		<md-button style="color: white" ui-sref="About"> HOW IT WORKS </md-button>
+		<md-button style="color: white" ui-sref="ViewPets"> PETS </md-button>
+		<md-button style="color: white" ui-sref="ViewSitters"> PALS </md-button>
+		<md-button style="color: white" ui-sref="Chat"> CHAT </md-button>
+		<md-button style="color: white" ui-sref="Contact"> CONTACT MANAGEMENT </md-button>
 	</div>
 
 	<ui-view></ui-view>
 	<!-- Ext Libs -->
-	<script src="angular/angular.min.js"></script>
+	<!-- <script src="angular/angular.min.js"></script>
 	<script src="angular-ui-router/release/angular-ui-router.min.js"></script>
-	<!-- Material -->
 	<script src="/angular-material/angular-material.min.js"></script>
 	<script src="/angular-aria/angular-aria.min.js"></script>
-	<script src="/angular-animate/angular-animate.min.js"></script>
+	<script src="/angular-animate/angular-animate.min.js"></script> -->
+
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0-rc1/angular-material.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-animate.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-aria.min.js"></script>
+
 	<!-- Global Src -->
-	<script src="/javascript/app.js"></script>
+	<!-- <script src="/javascript/app.js"></script> -->
 	<!-- Factories -->
-	<script src="/javascript/services/HomeFactory.js"></script>
+	<!-- <script src="/javascript/services/HomeFactory.js"></script>
 	<script src="/javascript/services/SitterFactory.js"></script>
 	<script src="/javascript/services/PetFactory.js"></script>
 	<script src="/javascript/services/UserFactory.js"></script>
-	<script src="/javascript/services/AuthInterceptor.js"></script>
+	<script src="/javascript/services/AuthInterceptor.js"></script> -->
 
 	<!-- Controllers -->
-	<script src="/javascript/controllers/HomeController.js"></script>
+	<!-- <script src="/javascript/controllers/HomeController.js"></script>
 	<script src="/javascript/controllers/GlobalController.js"></script>
 	<script src="/javascript/controllers/AddPetController.js"></script>
 	<script src="/javascript/controllers/AddSitterController.js"></script>
@@ -110,7 +116,9 @@
 	<script src="/javascript/controllers/EditPetController.js"></script>
 	<script src="/javascript/controllers/ViewSittersController.js"></script>
 	<script src="/javascript/controllers/ViewPetsController.js"></script>
-	<script src="/javascript/filters/usernamefilter.js"></script>
+	<script src="/javascript/filters/usernamefilter.js"></script> -->
+	<script src='/js/jsBundle.min.js'></script>
+
 
 </body>
 
