fixed file names -fixing herokuo

--- a/views/index.html
+++ b/views/index.html
@@ -99,7 +99,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-aria.min.js"></script>
 
 	<!-- Global Src -->
-	<!-- <script src="/javascript/app.js"></script> -->
+	<script src="/javascript/app.js"></script>
 	<!-- Factories -->
 	<!-- <script src="/javascript/services/HomeFactory.js"></script>
 	<script src="/javascript/services/SitterFactory.js"></script>
