--- a/public/views/EditPet.html
+++ b/public/views/EditPet.html
@@ -5,11 +5,11 @@
         <md-input-container layout-padding>
 
           <label> Pet Name </label>
-          <input required ng-model="vm.editPet.name" ></input>
+          <input required ng-model="vm.editPet.name | usernameFilter" ></input>
         </md-input-container>
         <md-input-container layout-padding>
           <label> Owner Name </label>
-          <input required ng-model="vm.editPet.owner" ></input>
+          <input required ng-model="vm.editPet.owner | usernameFilter" ></input>
         </md-input-container>
         <md-input-container layout-padding>
           <label> Suite Number </label>
