--- a/public/views/Home.html
+++ b/public/views/Home.html
@@ -1,8 +1,5 @@
 <div ng-controller="HomeController as vm" class='bodyColor'>
 
-<div style="height: 120px; width: 100%;">
-<img src="/images/apartment.jpg">
+<div style="width: 100%; background-image: url('/images/apartment.jpg')">
 </div>
-
-
 </div>
