--- a/public/templates/Home.html
+++ b/public/templates/Home.html
@@ -1,5 +1,7 @@
 <div ng-controller="HomeController as vm" class='bodyColor'>
 
-<div style="width: 100%; background-image: url('/images/apartment.jpg')">
-</div>
+  <div style="height: 120px; width: 100%;">
+  <img src="/images/apartment.jpg">
+  </div>
+
 </div>
