--- a/public/scss/site.scss
+++ b/public/scss/site.scss
@@ -133,3 +133,11 @@ md-toolbar section img{
 .bodyColor {
   background-color: #fafafa;
 }
+
+#home {
+  background-image: image('/images/apartment.jpg');
+}
+
+md-input-container {
+  display: inherit;
+}
