--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="/css/site.css">
 </head>
 
-<body ng-controller='GlobalController as nav'>
+<body ng-controller='GlobalController as nav' ng-cloak>
 
 	<md-sidenav class="md-sidenav-right md-whiteframe-z2" md-component-id="right">
 		<md-toolbar class="md-theme-light" style="padding : 10px; background-color: #38B0DE">
