--- a/public/templates/Chat.html
+++ b/public/templates/Chat.html
@@ -31,7 +31,7 @@
 
         <i class="material-icons md-24" style="padding-top: 4px"> filter_vintage </i>
         <div class="md-list-item-text" style="padding:10px;">
-          <h4>{{c.name | usernameFilter}} / Suite #{{c.unit}}:</h4>
+          <h4>{{c.name}} / Suite #{{c.unit}}:</h4>
           <h5>{{c.msg}}</h5>
         </div>
         <md-divider ng-if="!$last" style="padding: 5px"></md-divider>
