--- a/public/templates/about.html
+++ b/public/templates/about.html
@@ -1,11 +1,10 @@
-<div ng-controller="HomeController as vm" >
-<div style="padding: 90px" class='bodyColor' >
-
-<section layout layout-align="center">
-  <div class="animated bounceInDown">
-  <img src="/images/food.png" style="padding:20px">
-    <img src="/images/pals.png" style="padding:20px" >
-      <img src="/images/cocktail.png" style="padding:20px">
+<div ng-controller="HomeController as vm" class='bodyColor'>
+<div id="aboutSection" >
+<section layout layout-align="center" >
+  <div class="animated bounceInDown animationImgs" >
+  <img src="/images/food.png" >
+    <img src="/images/pals.png" >
+      <img src="/images/cocktail.png" >
     </div>
 </section>
 
