--- a/public/templates/Chat.html
+++ b/public/templates/Chat.html
@@ -1,13 +1,14 @@
 <div ng-controller="HomeController as vm" class='bodyColor'>
 
-  <div style="padding:90px;">
     <section layout layout-align="center">
-      <div class="animated bounceInDown" style="padding-bottom: 30px">
+      <div class="animated bounceInDown animationImgs">
         <img src="/images/msg.png">
       </div>
     </section>
 
-    <form ng-submit="vm.addMsg();">
+    <div class="pleaseLogin" ng-show="!vm.status._id"> Please login/register to be able to chat with your neighbors. </div>
+
+    <form ng-submit="vm.addMsg();" class="addEditforms" ng-show="vm.status._id">
       <md-input-container>
         <label> Name </label>
         <input disabled ng-model="vm.chats.name">
@@ -22,21 +23,17 @@
       </md-input-container>
       <md-button type="submit" class="md-raised"> SEND</md-button>
     </form>
-  </div>
 
-
-  <md-content class='bodyColor'>
-    <md-list style="padding-left:90px; padding-right: 90px;">
+  <div class='chatList' ng-show="vm.status._id">
+    <md-list>
       <md-list-item class="md-4-line" ng-repeat="c in vm.msgs">
-
-        <i class="material-icons md-24" style="padding-top: 4px"> filter_vintage </i>
-        <div class="md-list-item-text" style="padding:10px;">
+        <i class="material-icons md-24"> filter_vintage </i>
+        <div class="md-list-item-text" id="chatMsg">
           <h4>{{c.name}} / Suite #{{c.unit}}:</h4>
           <h5>{{c.msg}}</h5>
         </div>
-        <md-divider ng-if="!$last" style="padding: 5px"></md-divider>
+        <md-divider ng-if="!$last" ></md-divider>
       </md-list-item>
     </md-list>
-  </md-content>
-
+  </div>
 </div>
