--- a/public/templates/Contact.html
+++ b/public/templates/Contact.html
@@ -1,14 +1,16 @@
 <div ng-controller="HomeController as vm" class='bodyColor'>
 
-<form ng-submit="vm.contact()" style="padding: 90px" >
-  <section layout layout-align="center">
-  <div class="animated bounceInRight" style="padding-bottom: 30px" >
-    <img src="/images/contact.png" style="padding:20px">
-    <img src="/images/email.png" style="padding:20px">
-  <img src="/images/key.png" style="padding:20px">
-</div>
-</section>
-<p style="padding-bottom: 30px"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sollicitudin sodales ipsum, ac ultrices tortor sodales lacinia. Nunc euismod, urna vitae feugiat laoreet, tellus tellus interdum augue, vitae viverra sem tortor ut tortor. </p>
+    <section layout layout-align="center">
+    <div class="animated bounceInRight animationImgs">
+      <img src="/images/contact.png">
+      <img src="/images/email.png" >
+    <img src="/images/key.png" >
+  </div>
+  </section>
+  <p id="contactMsg" ng-show="vm.status._id"> Please send us a message and we will get back to you as soon as we can. If this is an emergency, please contact your building manager by phone. </p>
+<div class="pleaseLogin" ng-show="!vm.status._id"> Please login/register to contact building management </div>
+
+<form ng-submit="vm.contact()" class='addEditforms' ng-show="vm.status._id">
   <md-input-container layout-padding>
     <label> Name </label>
     <input disabled ng-model="vm.msg.name  | usernameFilter" ></input>
@@ -25,7 +27,7 @@
     <label> Message </label>
     <textarea required ng-model="vm.msg.msg" md-maxlength="2000"></textarea>
   </md-input-container>
-  <div style="padding-top:50px" layout>
+  <div layout>
     <md-button type="submit" class="md-raised" > Send </md-button>
     <md-button type="button" class="md-raised" ui-sref="Home">Cancel</md-button>
 </div>
