--- a/public/templates/EditPet.html
+++ b/public/templates/EditPet.html
@@ -1,7 +1,7 @@
 <div ng-controller="EditPetController as vm" class='bodyColor'>
 
-  <form ng-submit="vm.updatePet()" layout="row" style="padding: 90px">
- <div flex="60" style="padding-left: 40px">
+  <form ng-submit="vm.updatePet()" layout="row" class="addEditforms">
+ <div flex="60">
         <md-input-container layout-padding>
 
           <label> Pet Name </label>
@@ -33,7 +33,7 @@
           <textarea required ng-model="vm.editPet.bio" columns="1" md-maxlength="2000"></textarea>
           </md-input-container>
 
-        <div layout="row" style="padding-top:50px">
+        <div layout="row">
           <md-button type="submit" class="md-raised" > Edit Pet </md-button>
           <md-button type="button" class="md-raised" ui-sref="ViewPets">Cancel</md-button>
         </div>
