--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 <html ng-app="app">
 
 <head>
-	<title>Title</title>
+	<title> Pets and Pals </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -12,7 +12,7 @@
 <body ng-controller='GlobalController as nav' ng-cloak>
 
 	<md-sidenav class="md-sidenav-right md-whiteframe-z2" md-component-id="right">
-		<md-toolbar class="md-theme-light" style="padding : 10px; background-color: #38B0DE">
+		<md-toolbar class="md-theme-light" id="sidenavToolbar" >
 			<h1 class="md-toolbar-tools"> Login/Register </h1>
 		</md-toolbar>
 		<md-content layout-padding>
@@ -26,6 +26,7 @@
 						<label>Password</label>
 						<input type="password" ng-model="nav.user.password">
 					</md-input-container>
+					<div ng-show="nav.loginError" class="errorMsg">{{nav.loginError}}</div>
 					<md-button type="submit" class="md-raised">
 						Login
 					</md-button>
@@ -57,6 +58,7 @@
 						<label>Password</label>
 						<input type="password" ng-model="nav.user.password">
 					</md-input-container>
+					<div ng-show="nav.registerError" class="errorMsg">{{nav.registerError}}</div>
 					<md-button type="submit" class="md-raised"> Register</md-button>
 					<md-button type="button" class="md-raised" ng-click="nav.isLogin = true;">Cancel</md-button>
 				</form>
@@ -64,10 +66,9 @@
 		</md-content>
 	</md-sidenav>
 
-	<md-toolbar style=" background-color: #ff8d00;" layout>
-
-		<section layout flex layout-align="left" style="padding-left:20px">
-			<img src="/images/petspals.png" ui-sref="Home" style="padding-left: 30px">
+	<md-toolbar id="topToolbar" layout>
+		<section layout flex layout-align="left" id="logo" >
+			<img src="/images/petspals.png" ui-sref="Home">
 		</section>
 		<section flex-offset="30" layout layout-align="end end">
 			<md-button type="md-flat" disabled ng-show='nav.status.username;'> Welcome {{nav.status.username}} </md-button>
@@ -75,13 +76,13 @@
 			<md-button ng-click='nav.toggleRight();' ng-show='!nav.status.username;'> Login/Register </md-button>
 		</section>
 	</md-toolbar>
-	<div style='text-align:center; height:50px; width:100%; margin:auto; background-color: #696969;' flex>
-		<md-button style="color: white" ui-sref="Home"> HOME </md-button>
-		<md-button style="color: white" ui-sref="About"> HOW IT WORKS </md-button>
-		<md-button style="color: white" ui-sref="ViewPets"> PETS </md-button>
-		<md-button style="color: white" ui-sref="ViewSitters"> PALS </md-button>
-		<md-button style="color: white" ui-sref="Chat"> CHAT </md-button>
-		<md-button style="color: white" ui-sref="Contact"> CONTACT MANAGEMENT </md-button>
+	<div id="bottomToolbar" flex>
+		<md-button ui-sref="Home"> HOME </md-button>
+		<md-button ui-sref="About"> HOW IT WORKS </md-button>
+		<md-button ui-sref="ViewPets"> PETS </md-button>
+		<md-button ui-sref="ViewSitters"> PALS </md-button>
+		<md-button ui-sref="Chat"> CHAT </md-button>
+		<md-button ui-sref="Contact"> CONTACT BUILDING MANAGEMENT </md-button>
 	</div>
 
 	<ui-view></ui-view>
